virtual prototype typo

--- a/implementation/virtual-dom/prototype/main.html
+++ b/implementation/virtual-dom/prototype/main.html
@@ -11,7 +11,7 @@
 		<button id="refresh">refresh random</button>
 		<div>
 			👆🏻the gif doesnt reload even random number is being reloaded, our
-			virtual dom works!
+			virtual dom works 🎉
 		</div>
 		<script src="./main.js"></script>
 	</body>
