virtual prototype namings

--- a/implementation/virtual-dom/prototype/main.html
+++ b/implementation/virtual-dom/prototype/main.html
@@ -1,11 +1,12 @@
 <html>
 	<head>
-		<title>Virtual DOM</title>
+		<title>Virtual DOM Prototype</title>
 	</head>
 
 	<body>
 		<div>
-			Let's build a Virtual DOM from scratch with vanilla Javascript
+			Let's build a simple Virtual DOM from scratch with vanilla
+			Javascript
 		</div>
 		<div id="root"></div>
 		<button id="refresh">refresh random</button>
