--- a/implementation/fetch/index.html
+++ b/implementation/fetch/index.html
@@ -12,7 +12,7 @@
 				<button class="hackernews">Hacker News url</button>
 				<button class="invalid">Invalid url</button>
 			</div>
-			<div class="display"></div>
+			<div id="rows"></div>
 		</div>
 		<script src="./index.js"></script>
 	</body>
