--- a/widgets-implementation/csv-viewer/index.html
+++ b/widgets-implementation/csv-viewer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Accordion Demo</title>
+		<title>CSV Viewer Demo</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" type="text/css" href="src/styles.css" />
 	</head>
