--- a/vanilla-widgets-implementation/game-of-life/index.html
+++ b/vanilla-widgets-implementation/game-of-life/index.html
@@ -3,14 +3,12 @@
 	<head>
 		<title>Game of Life</title>
 		<meta charset="UTF-8" />
-		<link rel="stylesheet" type="text/css" href="src/styles.css" />
+		<link rel="stylesheet" type="text/css" href="./styles.css" />
 	</head>
 
 	<body>
-		<div id="app">
-            <div id="game-board"></div>
-            <button id="next-button">Next State</button>
-		</div>
-		<script src="src/index.js"></script>
+		<div id="game-board"></div>
+        <button id="next-button">Next State</button>
+		<script src="./index.js"></script>
 	</body>
 </html>
