snake game update

--- a/vanilla-widgets-implementation/snake-game/index.html
+++ b/vanilla-widgets-implementation/snake-game/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 <body>
-	<div id="snake-game-board">
+	<div id="board">
 	</div>
     <div>
         up, down, left, right arrows to move the snake
     </div>
 </body>
-<script type="text/javascript" src="snake-game.js"></script>
+<script type="text/javascript" src="./index.js"></script>
 </html>
