--- a/vanilla-widgets-implementation/debounce-and-throttle/index.html
+++ b/vanilla-widgets-implementation/debounce-and-throttle/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Debounce and Throttle</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script src="./index.js" defer></script>
 </head>
 <body>
+  <input type="text">
+  <div>
+    <b>Default:</b>
+    <span id="default"></span>
+  </div>
+  <div>
+    <b>Debounce:</b>
+    <span id="debounce"></span>
+  </div>
+  <div>
+    <b>Throttle:</b>
+    <span id="throttle"></span>
+  </div>
 </body>
-<script type="text/javascript" src="index.js"></script>
 </html>
